<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>OpenFileDlg</class>
 <widget class="QDialog" name="OpenFileDlg">
  <property name="windowModality">
   <enum>Qt::ApplicationModal</enum>
  </property>
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>554</width>
    <height>420</height>
   </rect>
  </property>
  <property name="contextMenuPolicy">
   <enum>Qt::NoContextMenu</enum>
  </property>
  <property name="windowTitle">
   <string>Open file</string>
  </property>
  <layout class="QVBoxLayout" name="verticalLayout">
   <property name="spacing">
    <number>1</number>
   </property>
   <property name="margin">
    <number>1</number>
   </property>
   <item>
    <widget class="QListWidget" name="FileList">
     <property name="frameShape">
      <enum>QFrame::NoFrame</enum>
     </property>
     <property name="verticalScrollBarPolicy">
      <enum>Qt::ScrollBarAlwaysOff</enum>
     </property>
     <property name="editTriggers">
      <set>QAbstractItemView::NoEditTriggers</set>
     </property>
     <property name="selectionBehavior">
      <enum>QAbstractItemView::SelectRows</enum>
     </property>
     <property name="iconSize">
      <size>
       <width>32</width>
       <height>32</height>
      </size>
     </property>
     <property name="horizontalScrollMode">
      <enum>QAbstractItemView::ScrollPerPixel</enum>
     </property>
     <property name="uniformItemSizes">
      <bool>true</bool>
     </property>
    </widget>
   </item>
  </layout>
  <action name="actionSelectFile">
   <property name="text">
    <string notr="true">SelectFile</string>
   </property>
   <property name="toolTip">
    <string notr="true">SelectFile</string>
   </property>
   <property name="shortcut">
    <string notr="true">Return</string>
   </property>
  </action>
  <action name="actionGoToBegin">
   <property name="text">
    <string notr="true">GoToBegin</string>
   </property>
   <property name="toolTip">
    <string notr="true">GoToBegin</string>
   </property>
   <property name="shortcut">
    <string notr="true">Home</string>
   </property>
  </action>
  <action name="actionNextPage">
   <property name="text">
    <string notr="true">NextPage</string>
   </property>
   <property name="toolTip">
    <string notr="true">NextPage</string>
   </property>
   <property name="shortcut">
    <string notr="true">PgDown</string>
   </property>
  </action>
  <action name="actionPrevPage">
   <property name="text">
    <string notr="true">PrevPage</string>
   </property>
   <property name="toolTip">
    <string notr="true">PrevPage</string>
   </property>
   <property name="shortcut">
    <string notr="true">PgUp</string>
   </property>
  </action>
  <action name="actionGoToLastPage">
   <property name="text">
    <string notr="true">GoToLastPage</string>
   </property>
   <property name="toolTip">
    <string notr="true">GoToLastPage</string>
   </property>
   <property name="shortcut">
    <string notr="true">Right</string>
   </property>
  </action>
  <action name="actionGoToFirstPage">
   <property name="text">
    <string notr="true">GoToFirstPage</string>
   </property>
   <property name="toolTip">
    <string notr="true">GoToFirstPage</string>
   </property>
   <property name="shortcut">
    <string notr="true">Left</string>
   </property>
  </action>
  <action name="actionRemoveFile">
   <property name="text">
    <string notr="true">RemoveFile</string>
   </property>
   <property name="toolTip">
    <string notr="true">RemoveFile</string>
   </property>
   <property name="shortcut">
    <string notr="true">Backspace</string>
   </property>
  </action>
 </widget>
 <resources/>
 <connections/>
</ui>
